--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation "io.ktor:ktor-server-netty:$ktor_version"
     implementation "ch.qos.logback:logback-classic:$logback_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
+    testImplementation "io.ktor:ktor-server-test-host:$ktor_version"
+
     implementation group: 'io.ktor', name: 'ktor-gson', version: ktor_version
 
 
@@ -59,8 +61,6 @@ dependencies {
     implementation group: 'io.insert-koin', name: 'koin-ktor', version: '2.2.3'
 
     testImplementation "io.insert-koin:koin-test:2.2.3"
-
-
 
 
 
